syntax = "proto3";

package connectproto;

message Event {
    string  id = 1;
    int64   time = 2;
    Response response = 3;
}

message Response {
    string udid = 1;
    string user_id = 2;
    string status = 3;
    string request_type = 4;
    string command_uuid = 5;
}

